feat- card element's mobile overview is done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
 <body>
   <main>
     <img src="images/bg-pattern-top.svg" alt="" class="top-left-bg-img">
+    <div class="card">
+      <div class="card_header"></div>
+      <div class="card_body">
+        <img src="./images/image-victor.jpg" alt="user-picture" class="user-img">
+        <div>
+          <p>Victor Crest <span>26</span></p>
+          <p>London</p>
+        </div>
+      </div>
+      <div class="card_footer">
+        <div>
+          <p>80K</p>
+          <p>Followers</p>
+        </div>
+        <div>
+          <p>803K</p>
+          <p>Likes</p>
+        </div>
+        <div>
+          <p>1.4K</p>
+          <p>Photos</p>
+        </div>
+      </div>
+    </div>
     <img src="images/bg-pattern-bottom.svg" alt="" class="bottom-right-bg-img">
-
-
   </main>
 
   <div class="attribution">
